--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -33,7 +33,10 @@ body{
 h2{
     font-size: 14px;
     font-weight: 700;
-
+}
+h1{
+    font-size: 18px;
+    font-weight: 700;
 }
 p {
     font-size: 12px;
@@ -49,6 +52,13 @@ p {
     display: flex;
     position: relative;
     
+}
+.sidebar {
+    display: flex;
+    flex-basis: 1;
+    background-color: var(--glass-color);
+    border-radius: 
+        var(--border-radius);
 }
 nav {
     display:flex;
@@ -82,16 +92,16 @@ nav ul li:active{
     display: flex;
     flex-direction: column;
     
-    background-color: var(--glass-color);
     border-radius: 
         0
         var(--border-radius) 
         var(--border-radius)
         0 ;
-    min-width: 20%;
+    width: 200px;
 }
 .chat-wrapper{
     flex-grow: 2;
+    flex-basis: 2;
     padding: var(--default-padding);
     display: flex;
     flex-direction: column;
@@ -109,7 +119,7 @@ nav ul li:active{
 }
 .chat .chat-item {
     min-width: 30%;
-    padding: var(--default-padding);
+    padding: 0 var(--default-padding);
     background-color: var(--glass-color);
     backdrop-filter: var(--blur);
     border-radius: var(--border-radius);
@@ -132,6 +142,8 @@ nav ul li:active{
     border-radius: var(--border-radius);
     border: none;
     flex-grow: 2;
+    height: 70px;
+    resize: none;
 }
 
 .primary-button{
@@ -178,9 +190,15 @@ nav ul li:active{
     display: flex;
     flex-direction: column;
 }
-.contact-preview .contact-details h2{
+.contact-preview .contact-details h2,
+.contact-preview .contact-details p,
+.contact-preview .contact-details h1{
    margin: 0;
 }
-.contact-preview .contact-details p{
-    margin: 0;
+ .contact-preview.large .avatar {
+    height: 50px;
+    width: 50px;
+ }
+ .contact-preview.large {
+  padding: 0;
  }
