--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -1,3 +1,9 @@
+.chat-container{
+    width: 100%;
+    display: flex;
+    
+}
+
 .chat-list{
     display: flex;
     flex-direction: column;
@@ -9,7 +15,7 @@
         0 ;
     width: 200px;
 }
-.chat-wrapper{
+.current-chat{
     flex-grow: 2;
     flex-basis: 2;
     padding: var(--default-padding);
