--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,6 +2,10 @@
     font-family: Poppins, sans-serif;
 }
 
+html, body { 
+    margin:0; 
+    padding:0; 
+    height:100% }
 body {
     --border-radius: 20px;
     --default-padding: 20px;
@@ -26,6 +30,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 h2{
