--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -56,10 +56,7 @@
 button.login {
     width: 100%;
     border-radius: 
-        0
-        0
-        var(--border-radius)
-        var(--border-radius);
+        var(--default-padding);
         cursor: pointer;
 
 }
