--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -44,4 +44,5 @@
     mask-image:  url(/assets/img/send-icon.svg);
     -webkit-mask-repeat: no-repeat;
     mask-repeat: no-repeat; 
+    mask-size: cover;
 }
