--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -123,3 +123,50 @@ nav ul li.active{
     align-items: center; 
     cursor: pointer;
 }
+
+.error-message{
+    position: fixed; 
+    bottom: 2em; 
+    left: 50%;
+    transform: translateX(-50%);
+    height: 50px; 
+    width: 400px;
+    background-color: var(--glass-color);  
+    border-radius: 10px;
+    pointer-events: auto; 
+    z-index: 2147483647; 
+    display: flex; 
+    gap: 15px;
+    overflow: hidden;
+    align-items: center ;
+}
+.error-message .error-border {
+    height: 100%;
+    width: 10px;
+    background-color: #fe6868;
+}
+.error-message .error-text {
+    display: flex;
+    flex-direction: column;
+}
+.error-message .error-text h2 {
+    margin: 0;
+    text-align: left;
+}
+.error-message .error-text p {
+    margin: 0;
+}
+.error-message .error-icon {
+    height: 25px;
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fe6868;
+    -webkit-mask-image: url(/assets/img/close.svg);
+    mask-image:  url(/assets/img/close.svg);
+    -webkit-mask-repeat: no-repeat; 
+    mask-repeat: no-repeat; 
+    -webkit-mask-size: cover;
+    mask-size: cover;
+}
