--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -14,6 +14,7 @@
         var(--border-radius)
         0 ;
     border-right: 1px solid white;
+    width: 200px;
 }
 .chat-list::-webkit-scrollbar {
     display: none;
@@ -55,6 +56,7 @@
 }
 .chat .chat-item {
     min-width: 30%;
+    max-width: 70%;
     padding: 0 var(--default-padding);
     background-color: var(--glass-color);
     backdrop-filter: var(--blur);
@@ -170,4 +172,12 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
+}
+.no-chat {
+    width: 85%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
