--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -57,3 +57,13 @@
     mask-repeat: no-repeat; 
     mask-size: cover;
 }
+.no-chat-icon {
+    background-color: black;
+    width: 20px;
+    height: 20px;
+    -webkit-mask-image: url(/assets/img/unlock-icon.svg);
+    mask-image:  url(/assets/img/unlock-icon.svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat; 
+    mask-size: cover;
+}
