--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -1,19 +1,23 @@
+
 .profile-container {
     padding: var(--default-padding);
     display: flex;
+    flex-direction: column;
     gap: var(--default-padding);
+    padding: var(--default-padding);
     justify-content: center;
     align-items: center;
+    margin: auto;
 
 }
-.profile-details {
-    
-
+.change-profile-box{
+    display: flex;
+    gap: var(--default-padding);
 }
+
 .profile-avatar {
-   
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
     object-fit: cover;
 
@@ -22,12 +26,4 @@
     display: flex;
     flex-direction: column;
     padding-bottom: var(--default-padding);
-}
-.change-profile-box {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    gap: var(--default-padding);
-    align-items: center;
-    justify-content: center;
 }
