--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -22,7 +22,6 @@
 
 .chat-list .contact-preview:first-child.active::before{
     content: "";
-    /* background-color: var(--glass-color); */
     background-color: var(--glass-color);
     height: 20px;
     width: 20px;
@@ -31,10 +30,7 @@
     top: 0;
     -webkit-mask-image: url(/assets/img/corner.svg);
     mask-image:  url(/assets/img/corner.svg);
-    /* clip-path: circle(100% at 0 100%);  */
 }
-
-
 
 .current-chat{
     flex-grow: 2;
@@ -124,6 +120,7 @@
     height: 30px;
     width: 30px;
     border-radius: 50%;
+    object-fit: cover;
 }
 .contact-preview.active{
     background: var(--glass-color);
@@ -172,6 +169,7 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
+    object-fit: cover;
 }
 .no-chat {
     width: 85%;
