--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -13,6 +13,7 @@
 .change-profile-box{
     display: flex;
     gap: var(--default-padding);
+    align-items: end;
 }
 
 .profile-avatar {
@@ -20,10 +21,42 @@
     width: 200px;
     border-radius: 50%;
     object-fit: cover;
-
 }
 .input-group {
     display: flex;
     flex-direction: column;
-    padding-bottom: var(--default-padding);
+}
+.input-group label {
+    font-size: 12px;
+}
+
+.input-group input {
+    height: 50px;
+    width: 100%;
+    border-radius: var(--border-radius);
+    border: 1px solid white;
+    background-color: var(--glass-color);
+    padding: var(--small-padding);
+}
+
+.profile-avatar-box{
+    position: relative;
+}
+.profile-avatar-box .file-upload{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--glass-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 1px solid white;
+}
+
+.file-upload input{
+    display: none;
 }
